försökte fixa lite bättre spacing baserat på rutans storlek

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,14 @@
+
+
 body {
     font-family: 'Afacad', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-headers {
+header {
     display: flex;
+    width: 100%;
     flex-direction: column;
     color: black;
 }
@@ -18,6 +21,11 @@ headers {
     border: 1px solid black;
     border-left: none;
     border-right: none;
+}
+
+.spacer {
+    flex: 0 0 40px;
+    width: 40px;
 }
 
 .logo {
@@ -39,11 +47,21 @@ header form {
 input {
     font-family: inherit;
     font-size: 18px;
-    width: 300px;
+    width: 400px;
     padding: 6px;
     outline: none;
     border: 1px solid gray;
     background: url(../images/search-interface-symbol.png) no-repeat right 10px center;
     background-size: 20px;
+    box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    .spacer {
+        display: none;
+    }
+    input {
+        width: 200px;
+    }
 }
 
